--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,8 @@
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.muse.chat": "1.0.0-pre.15",
+    "com.unity.muse.sprite": "1.1.1",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
